updated project name

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "reactNativeNew",
-  "displayName": "reactNativeNew"
+  "name": "reactNativeTemplate",
+  "displayName": "reactNativeTemplate"
 }
